# eduverse-turbo

./: bun.lockb  package.json
apps/backend/: bun.lockb  package.json
apps/backend/lib/: pinata.ts
apps/backend/src/: User.ts  auth.ts  index.ts  metaverse.ts  roomManager.ts  types.ts  utils.ts  verify-enrollment.ts
apps/backend/src/routes/: metaverse-ws.ts  upload-to-ipfs.ts
apps/contract/: Cargo.toml  lib.rs
apps/web/: package-lock.json  package.json
apps/web/src/: routeTree.gen.ts  types.ts
apps/web/src/components/: course-grid.tsx  footer.tsx  header.tsx  hero.tsx  mode-toggle.tsx  stats.tsx
apps/web/src/components/ui/: chart.tsx  mode-toggle.tsx
apps/web/src/lib/: utils.ts
apps/web/src/providers/: ContractProvider.tsx  ThemeProvider.tsx
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/routes/(contract)/certificates/: index.tsx
apps/web/src/routes/(contract)/courses/: $courseId.tsx  index.tsx
apps/web/src/routes/(contract)/dashboard/: index.tsx
apps/web/src/routes/(contract)/profile/: index.tsx
apps/web/src/routes/(contract)/teach/: index.tsx
apps/web/src/routes/(contract)/teach/courses/: $courseId.edit.tsx  $courseId.tsx
apps/web/src/routes/(contract)/teach/dashboard/: index.tsx
apps/web/src/routes/(metaverse)/campus/: index.tsx
