[package]
name = "course_management"
version = "5.1.0"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
psp34 = { git = "https://github.com/r0gue-io/PSP34.git", default-features = false, features = ["ink-as-dependency"] }

# Note: We **need** to specify the `ink-as-dependency` feature.
# If we don't we will end up with linking errors!

[dev-dependencies]
ink_e2e = { version = "5.1.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp34/std",
]
ink-as-dependency = []
e2e-tests = []
